revise for android

--- a/proj.android/project.properties
+++ b/proj.android/project.properties
@@ -8,6 +8,7 @@
 # project structure.
 
 # Project target.
-target=android-10
+target=android-14
 
-android.library.reference.1=../cocos2d/cocos/2d/platform/android/java
+android.library.reference.1=../../../cocos2d-x-3.2rc0/cocos/platform/android/java
+android.library=false
